fix: revert form alignment styles

--- a/assets/src/styles/predefined_form_type.scss
+++ b/assets/src/styles/predefined_form_type.scss
@@ -21,7 +21,7 @@
       display: flex;
       align-items: center;
       flex-direction: row;
-      justify-content: flex-start;
+      justify-content: center;
       flex-wrap: wrap;
       gap: 15px;
       margin-top: 15px;
@@ -47,7 +47,7 @@
       align-items: center;
       flex-direction: row;
       margin: 18px 0;
-      justify-content: flex-start;
+      justify-content: flex-end;
       gap: 18px;
 
       button {
